HDFS-459. Introduce Job History Log Analyzer. Contributed by Konstantin Shvachko.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@792299 13f79535-47bb-0310-9956-ffa450edef68